# meow-2024

./: .gitignore  Documentation.md  README.md  auth.py  database.py  dbfunctions.py  frontend.py  main.py  pyproject.toml  sql.py  tests.py  validate.py  view.py
scripts/: backend-database-to-backend.sh  backend-database-to-backend[1].sh  backend-routing-to-backend.sh  backend-to-backend-database.sh  backend-to-backend-routing.sh  backend-to-dev.sh  backend-update.sh  dev-to-backend.sh  dev-to-frontend.sh  dev-to-main.sh  dev-to-qa.sh  devops-security-to-main.sh  frontend-layout-to-frontend.sh  frontend-sub-to-frontend.sh  frontend-templates-to-frontend.sh  frontend-to-dev.sh  frontend-to-frontend-layout.sh  frontend-to-frontend-sub.sh  frontend-to-frontend-templates.sh  generate.sh  git-identity.sh  main-to-dev.sh  main-to-devops-security.sh  qa-backend-to-qa.sh  qa-frontend-to-qa.sh  qa-frontend.sh  qa-to-dev.sh  qa-to-qa-backend.sh  qa-to-qa-frontend.sh  qa-update.sh
templates/: add_activity.html  add_cca.html  cca.html  edit_activities.html  edit_cca.html  home.html  index.html  join_activity.html  login.html  manage.html  manageact.html  managecca.html  navigation.html  privacy-policy.html  profile.html  profile_edit.html  records.html  records_activities.html  records_cca.html  register.html  slider.css  style.css  style_register.css  temp.html  terms-and-conditions.html  view_activities.html  view_cca.html  view_edit_cca.html
tests/: Test_Backend.py  Test_Backend_New.py  Test_Frontend.py  Test_Validate.py  test_backend.py  test_backend_new.py  test_frontend.py  (+1 more)
(+21 files in other folders)
